--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -950,6 +950,8 @@
   "Time expired": "",
   "QR code is invalid": "",
   "Is the password saved locally": "",
-  "Reconnect": ""
+  "Reconnect": "",
+  "Daily Active Users": "",
+  "Daily Active Users Data Distribution": ""
 }
 
