--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -947,5 +947,9 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "Недостаточно DGC, необходимо приобрести дополнительно {{ num }} DGC. После успешной покупки DGC обновитесь до VIP.",
   "Recharge DGC": "Пополнить DGC",
   "Time expired": "Время истекло",
-  "QR code is invalid": "QR-код недействителен"
+  "QR code is invalid": "QR-код недействителен",
+  "Is the password saved locally": "รหัสผ่านถูกบันทึกไว้ในเครื่องหรือไม่",
+  "Reconnect": "Переподключить",
+  "Daily Active Users": "Ежедневные активные пользователи",
+  "Daily Active Users Data Distribution": "Распределение данных ежедневных активных пользователей"
 }
