--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -948,5 +948,9 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "DGC miktarı yetersiz, ek olarak {{ num }} DGC satın alınması gerekiyor. DGC satın alma işlemi başarılı olduktan sonra VIP'e yükseltin.",
   "Recharge DGC": "DGC Şarj Et",
   "Time expired": "Süre doldu",
-  "QR code is invalid": "QR kodu geçersiz"
+  "QR code is invalid": "QR kodu geçersiz",
+  "Is the password saved locally": "Şifre yerel olarak kaydediliyor mu",
+  "Reconnect": "Yeniden bağlanmak",
+  "Daily Active Users": "Günlük Aktif Kullanıcılar",
+  "Daily Active Users Data Distribution": "Günlük aktif kullanıcı veri dağılımı"
 }
