--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -948,6 +948,10 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "",
   "Recharge DGC": "",
   "Time expired": "",
-  "QR code is invalid": ""
+  "QR code is invalid": "",
+  "Is the password saved locally": "",
+  "Reconnect": "",
+  "Daily Active Users": "",
+  "Daily Active Users Data Distribution": ""
 }
 
