--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -948,5 +948,9 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "DGCの数量が不足しています。追加で{{ num }}DGCを購入する必要があります。DGCの購入が成功した後、VIPにアップグレードしてください。",
   "Recharge DGC": "DGCをチャージ",
   "Time expired": "時間切れ",
-  "QR code is invalid": "QRコードが無効です"
+  "QR code is invalid": "QRコードが無効です",
+  "Is the password saved locally": "パスワードはローカルに保存されますか",
+  "Reconnect": "さいせつぞく",
+  "Daily Active Users": "にちかんアクティブユーザー",
+  "Daily Active Users Data Distribution": "日間アクティブユーザーのデータ分布"
 }
