--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -948,5 +948,9 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "A quantidade de DGC é insuficiente, é necessário comprar {{ num }} DGC adicionais. Após a compra de DGC ser concluída, atualize para VIP.",
   "Recharge DGC": "Recarregar DGC",
   "Time expired": "Tempo expirado",
-  "QR code is invalid": "O código QR é inválido"
+  "QR code is invalid": "O código QR é inválido",
+  "Is the password saved locally": "A senha é salva localmente",
+  "Reconnect": "Reconectar",
+  "Daily Active Users": "Usuários Ativos Diários",
+  "Daily Active Users Data Distribution": "Distribuição de dados de usuários ativos diários"
 }
