--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -937,5 +937,9 @@
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "Số lượng DGC không đủ, cần mua thêm {{ num }} DGC. Sau khi mua DGC thành công, hãy nâng cấp lên VIP.",
   "Recharge DGC": "Nạp DGC",
   "Time expired": "Hết thời gian",
-  "QR code is invalid": "Mã QR không hợp lệ"
+  "QR code is invalid": "Mã QR không hợp lệ",
+  "Is the password saved locally": "Mật khẩu có được lưu cục bộ không",
+  "Reconnect": "Kết nối lại",
+  "Daily Active Users": "Người dùng hoạt động hàng ngày",
+  "Daily Active Users Data Distribution": "Phân bố dữ liệu người dùng hoạt động hàng ngày"
 }
