--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -951,5 +951,8 @@
   "Is the password saved locally": "本地是否保存密码",
   "Reconnect": "重新连接",
   "Daily Active Users": "日活用户",
-  "Daily Active Users Data Distribution": "日活用户数据分布"
+  "Daily Active Users Data Distribution": "日活用户数据分布",
+  "Face verification failed": "人脸验证失败",
+  "KYC authentication information is incomplete": "KYC认证信息不完善",
+  "Captcha security authentication failed": "验证码安全认证失败"
 }
