update audio model desc

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "Geeignet für die Bearbeitung alltäglicher Aufgaben",
   "Strong writing and coding skills": "Starke Schreib- und Codierungsfähigkeiten",
   "Multimodal graphics and text, quick response": "Multimodale Grafiken und Texte, schnelle Reaktion",
+  "Focused on audio interaction": "Sich auf Audio-Interaktion konzentriert",
   "Expert in Q&A, lively expression style": "Fachkundig in Q&A, lebhafter Ausdrucksstil",
   "Strong writing ability, high stability": "Starke Schreibfähigkeit, hohe Stabilität",
   "Multimodal graphics and text, reasoning enhancement": "Multimodale Grafiken und Texte mit verbesserter Logikverarbeitung",
