--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "",
   "Strong writing and coding skills": "",
   "Multimodal graphics and text, quick response": "",
+  "Focused on audio interaction": "",
   "Expert in Q&A, lively expression style": "",
   "Strong writing ability, high stability": "",
   "Multimodal graphics and text, reasoning enhancement": "",
