--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -707,6 +707,7 @@
   "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
   "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
   "Multimodal graphics and text, quick response": "Graphiques et texte multimodaux, réponse rapide",
+  "Focused on audio interaction": "Concentré sur l'interaction audio",
   "Expert in Q&A, lively expression style": "Expert en Q&A, style d'expression vif",
   "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
   "Multimodal graphics and text, reasoning enhancement": "Graphiques et texte multimodal avec amélioration du raisonnement",
