--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "Sangat cocok untuk menangani tugas harian",
   "Strong writing and coding skills": "Kemampuan menulis dan pengkodean yang kuat",
   "Multimodal graphics and text, quick response": "Grafik dan teks multimodal, respons cepat",
+  "Focused on audio interaction": "Berfokus pada interaksi audio",
   "Expert in Q&A, lively expression style": "Ahli dalam Tanya Jawab, gaya ekspresi yang ceria",
   "Strong writing ability, high stability": "Kemampuan menulis yang kuat, stabilitas tinggi",
   "Multimodal graphics and text, reasoning enhancement": "Grafik dan teks multimodal dengan peningkatan penalaran",
