--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "日常的なタスクの処理に適しています",
   "Strong writing and coding skills": "優れたライティングとコーディング能力",
   "Multimodal graphics and text, quick response": "マルチモーダルなグラフィックとテキスト、高速レスポンス",
+  "Focused on audio interaction": "オーディオインタラクションに注力",
   "Expert in Q&A, lively expression style": "質疑応答に長け、表現スタイルは活発",
   "Strong writing ability, high stability": "ライティング能力が高く、安定性が高い",
   "Multimodal graphics and text, reasoning enhancement": "マルチモーダルグラフィックとテキスト、推論機能強化",
