--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "일상 작업 처리에 매우 적합",
   "Strong writing and coding skills": "강력한 글쓰기 및 코딩 능력",
   "Multimodal graphics and text, quick response": "멀티모달 그래픽 및 텍스트, 빠른 응답",
+  "Focused on audio interaction": "오디오 인터랙션에 초점을 맞춤",
   "Expert in Q&A, lively expression style": "Q&A 전문가, 활기찬 표현 스타일",
   "Strong writing ability, high stability": "강력한 글쓰기 능력, 높은 안정성",
   "Multimodal graphics and text, reasoning enhancement": "멀티모달 그래픽 및 텍스트, 추론 기능 강화",
