--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "Muito adequado para lidar com tarefas diárias",
   "Strong writing and coding skills": "Fortes habilidades de escrita e codificação",
   "Multimodal graphics and text, quick response": "Gráficos e texto multimodal, resposta rápida",
+  "Focused on audio interaction": "Focado em interação de áudio",
   "Expert in Q&A, lively expression style": "Experto em Perguntas e Respostas, estilo de expressão vivo",
   "Strong writing ability, high stability": "Forte capacidade de escrita, alta estabilidade",
   "Multimodal graphics and text, reasoning enhancement": "Gráficos e texto multimodal com aprimoramento de raciocínio",
