--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -707,6 +707,7 @@
   "Well-suited for handling daily tasks": "Хорошо подходит для выполнения ежедневных задач",
   "Strong writing and coding skills": "Сильные навыки письма и программирования",
   "Multimodal graphics and text, quick response": "Мультимодальная графика и текст, быстрый отклик",
+  "Focused on audio interaction": "Сосредоточен на аудиоинтеракции",
   "Expert in Q&A, lively expression style": "Эксперт в вопросах и ответах, оживленный стиль выражения",
   "Strong writing ability, high stability": "Сильная навыковая писателя, высокая стабильность",
   "Multimodal graphics and text, reasoning enhancement": "Мультимодальная графика и текст с улучшенной логической обработкой",
