--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -707,6 +707,7 @@
   "Well-suited for handling daily tasks": "เหมาะสำหรับการจัดการงานประจำวัน",
   "Strong writing and coding skills": "ทักษะการเขียนและเขียนโค้ดแข็งแกร่ง",
   "Multimodal graphics and text, quick response": "กราฟิกและข้อความแบบมัลติโมดัล, การตอบสนองที่รวดเร็ว",
+  "Focused on audio interaction": "มุ่งเน้นการโต้ตอบเสียง",
   "Expert in Q&A, lively expression style": "เชี่ยวชาญถามตอบ มีสไตล์การแสดงออกมีชีวิตชีวา",
   "Strong writing ability, high stability": "ความสามารถในการเขียนดี มีเสถียรภาพสูง",
   "Multimodal graphics and text, reasoning enhancement": "กราฟิกและข้อความแบบมัลติโมดัล พร้อมการเสริมสร้างการให้เหตุผล",
