--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "Günlük görevleri işlemek için ideal",
   "Strong writing and coding skills": "Güçlü yazma ve kodlama becerileri",
   "Multimodal graphics and text, quick response": "Çok modlu grafikler ve metin, hızlı yanıt",
+  "Focused on audio interaction": "Ses etkileşimine odaklanmıştır",
   "Expert in Q&A, lively expression style": "Soru-cevap uzmanı, canlı ifade tarzı",
   "Strong writing ability, high stability": "Güçlü yazma yeteneği, yüksek kararlılık",
   "Multimodal graphics and text, reasoning enhancement": "Çok modlu grafikler ve metin, akıl yürütme geliştirme",
