--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -708,6 +708,7 @@
   "Well-suited for handling daily tasks": "Phù hợp xử lý công việc hàng ngày",
   "Strong writing and coding skills": "Mạnh về viết lách và lập trình",
   "Multimodal graphics and text, quick response": "Đồ họa và văn bản đa phương thức, phản hồi nhanh",
+  "Focused on audio interaction": "Tập trung vào tương tác âm thanh",
   "Expert in Q&A, lively expression style": "Chuyên gia hỏi đáp, phong cách diễn đạt sinh động",
   "Strong writing ability, high stability": "Khả năng viết tốt, ổn định cao",
   "Multimodal graphics and text, reasoning enhancement": "Đồ họa và văn bản đa phương thức, nâng cao khả năng lập luận",
