--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -707,6 +707,7 @@
   "Well-suited for handling daily tasks": "适合处理日常任务",
   "Strong writing and coding skills": "强写作与编码",
   "Multimodal graphics and text, quick response": "多模态图文，快速响应",
+  "Focused on audio interaction": "专注音频交互",
   "Expert in Q&A, lively expression style": "擅长问答，表达风格活泼",
   "Strong writing ability, high stability": "写作能力强，稳定性高",
   "Multimodal graphics and text, reasoning enhancement": "多模态图文，推理增强",
