--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -707,6 +707,7 @@
   "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
   "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
   "Multimodal graphics and text, quick response": "Gráficos y texto multimodal, respuesta rápida",
+  "Focused on audio interaction": "Centrado en interacción de audio",
   "Expert in Q&A, lively expression style": "Expert en Q&A, style d'expression vif",
   "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
   "Multimodal graphics and text, reasoning enhancement": "Gráficos y texto multimodal con mejora de razonamiento",
